# traversal

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  flake.nix  generate_large_workspace.py
crates/traversal/: Cargo.toml  main.rs
crates/traversal-core/: Cargo.toml
crates/traversal-core/src/: lib.rs
crates/traversal-lsp/: Cargo.toml
test_workspace/: my_file.cpp
test_workspace/some_lib/: my_other_file.md
vscode-extension/: package-lock.json  package.json  tsconfig.json
vscode-extension/src/: extension.ts
