[package]
name = "traversal-lsp"
version = "0.1.0"
edition = "2024"

[[bin]]
bench = false
name = "traversal-lsp"

[dependencies]
anyhow = "1.0.103"
log = "0.4.33"
lsp-server = "0.9.0"
lsp-types = { version = "0.10.0", package = "gen-lsp-types", features = ["url"] }
rustc-hash = "2.1.3"
serde = "1.0.228"
serde_json = "1.0.150"
toolchain = "0.1.0-alpha.1"
